--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,10 @@
 project:
   type: website
   output-dir: docs
+  render:
+    - "*.qmd"
+    - "*.Rmd"
+    - "!tmp/"
 
 website:
   title: "Arctic Neuroscience"
